--- a/index.html.html
+++ b/index.html.html
@@ -44,7 +44,7 @@ onclick="document.getElementById('JavaDemo').innerHTML = ages under 50">
 Click me for more information.</button><br>
 
     
-    <a href="Aquarium.html">Aquarium</a><br>
+    <a href="Aquarium">Aquarium</a><br>
     <a href="hhtp://google.com">Google</a>
 </body>
 </html>
