--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         td{background-color:#3F88BB;
            color:blue;}
         .firstCell{background-color:#B83C53;}
+        .secondCell{background-color:#C22F31;}
         #heading{background-color:aqua;}
     </style>
 </head>
@@ -32,11 +33,11 @@
     <p style="color:#315CA5">The Boston Aquarium has so much to offer! Plan a trip for yourself!<br>Here is some resources to get you started!</p>
     <table>
     <tr><th class="firstCell" id="JavaDemo">Adults</th>
-        <th>Children</th>
+        <th class="secondCell">Children</th>
     </tr>
     <tr>
         <td>34</td>
-        <td>24</td>
+        <td>24</td><br>
     </tr><br>
     </table>
 <button type="button"
