--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
     <h1 style="color:blue;">Top 3 Animals In The Boston Aquarium</h1>
     <p><strong>Ever wondered what a giant octopus, jelly fish, or sea horse looked up close? Well now you can!<br> 
         The Boston Aquarium has all three and more! Here are the top 3 animals we got to see!</strong></p>
+    <p>In this list, we will discuss...</p>
+    <ol>Giant Octopus<br>
+        Leafy Sea Dragon<br>
+        Moon Jelly Fish</ol>
     
     <h2 id="heading">1. Giant Octopus</h2>
     <img src="Images/Giant Octopus.jpg" alt="Image of giant octopus swimming in water."/>
